Closed
Bug 606061
Opened 15 years ago
Closed 15 years ago
The border on the download manager doesn't wrap all the way around
Categories
(Core :: Widget: Win32, defect)
Tracking
()
VERIFIED
FIXED
mozilla2.0b8
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
People
(Reporter: mozbugz, Assigned: Felipe)
References
Details
(Keywords: regression)
Attachments
(3 files)
User-Agent: Mozilla/5.0 (Windows NT 6.1; rv:2.0b8pre) Gecko/20101019 Firefox/4.0b8pre
Build Identifier:
This is broken by bug 601603
Regression range:
broken: http://hg.mozilla.org/mozilla-central/rev/87b059ee9a67
works: http://hg.mozilla.org/mozilla-central/rev/d35efa6966ac
Reproducible: Always
| Reporter | ||
Comment 1•15 years ago
|
||
| Reporter | ||
Updated•15 years ago
|
| Assignee | ||
Updated•15 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Updated•15 years ago
|
Component: General → Widget: Win32
Product: Firefox → Core
QA Contact: general → win32
Updated•15 years ago
|
blocking2.0: --- → ?
Updated•15 years ago
|
Assignee: nobody → felipc
blocking2.0: ? → final+
| Assignee | ||
Comment 5•15 years ago
|
||
This is about the minimum glass height of the caption buttons. This should be only done for windows with the custom titlebar, because for regular windows the height we add for the extended glass starts counting from the content area.
This didn't happen before because the previous code (from bug 574833) only calculated a value different than 0 for custom titlebar windows, but the patches from bug 601603 changed that.
Attachment #489938 -
Flags: review?(jmathies)
Updated•15 years ago
|
Attachment #489938 -
Flags: review?(jmathies) → review+
| Assignee | ||
Comment 7•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
| Reporter | ||
Comment 8•15 years ago
|
||
V. Fixed. Mozilla/5.0 (Windows NT 6.1; rv:2.0b8pre) Gecko/20101113 Firefox/4.0b8pre ID:20101113042433
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•