Bug 606061. The border on the download manager doesn't wrap all the way around. r=jimm a=blocking-final